--- a/client/package.json
+++ b/client/package.json
@@ -9,12 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-select": "^5.0.1",
     "@types/uuid": "^9.0.1",
     "axios": "^1.3.6",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
+    "react-select": "^5.7.3",
     "uuid": "^9.0.0",
     "vite-plugin-svgr": "^2.4.0"
   },
