--- a/.env
+++ b/.env
@@ -7,3 +7,9 @@ DEV_AUTH_POSTGRES_STRING=postgres://postgres:123454321@localhost:5432
 
 PROD_RECIPE_POSTGRES_STRING=postgres://postgres:123454321@recipe_database
 DEV_RECIPE_POSTGRES_STRING=postgres://postgres:123454321@localhost:5432
+
+
+AWS_ACCESS_KEY_ID=AKIAYGNLSSOBPBOHUCXQ
+AWS_SECRET_ACCESS_KEY=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
+AWS_BUCKET_NAME= delicious-food-pics
+AWS_BUCKET_REGION=us-east-1
