--- a/recipe/package.json
+++ b/recipe/package.json
@@ -11,17 +11,26 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.345.0",
+    "@aws-sdk/lib-storage": "^3.345.0",
+    "@aws-sdk/s3-request-presigner": "^3.345.0",
     "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
-    "@types/pg": "^8.6.6",
+    "@types/multer-s3": "^3.0.0",
+    "@types/pg": "^8.10.1",
+    "aws-sdk": "^2.1391.0",
     "axios": "^1.3.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "nodemon": "^2.0.22",
+    "path": "^0.12.7",
     "pg": "^8.10.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.15.13"
   }
 }
