adding more policies to AWS bucket for CRUD operations

--- a/.env
+++ b/.env
@@ -13,3 +13,4 @@ AWS_ACCESS_KEY_ID=AKIAYGNLSSOBPBOHUCXQ
 AWS_SECRET_ACCESS_KEY=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
 AWS_BUCKET_NAME= delicious-food-pics
 AWS_BUCKET_REGION=us-east-1
+DISTRIBUTION_ID= E2RBR8VTGVQFWZ
