--- a/recipe/package.json
+++ b/recipe/package.json
@@ -11,22 +11,27 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-cloudfront": "^3.352.0",
     "@aws-sdk/client-s3": "^3.345.0",
     "@aws-sdk/lib-storage": "^3.345.0",
     "@aws-sdk/s3-request-presigner": "^3.345.0",
     "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
+    "@types/ioredis": "^5.0.0",
     "@types/multer-s3": "^3.0.0",
     "@types/pg": "^8.10.1",
+    "@types/redis": "^4.0.11",
     "aws-sdk": "^2.1391.0",
     "axios": "^1.3.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "ioredis": "^5.3.2",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "nodemon": "^2.0.22",
     "path": "^0.12.7",
-    "pg": "^8.10.0"
+    "pg": "^8.10.0",
+    "redis": "^4.6.7"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
