adding social service for all user recipes

--- a/.env
+++ b/.env
@@ -8,6 +8,8 @@ DEV_AUTH_POSTGRES_STRING=postgres://postgres:123454321@localhost:5432
 PROD_RECIPE_POSTGRES_STRING=postgres://postgres:123454321@recipe_database
 DEV_RECIPE_POSTGRES_STRING=postgres://postgres:123454321@localhost:5432
 
+PROD_SOCIAL_POSTGRES_STRING=postgres://postgres:123454321@social_database
+DEV_SOCIAL_POSTGRES_STRING=postgres://postgres:123454321@localhost:5432
 
 AWS_ACCESS_KEY_ID=AKIAYGNLSSOBPBOHUCXQ
 AWS_SECRET_ACCESS_KEY=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
