--- a/auth/package.json
+++ b/auth/package.json
@@ -11,11 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/lib-storage": "^3.374.0",
     "@types/axios": "^0.14.0",
     "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.4",
+    "@types/multer": "^1.4.7",
     "@types/pg": "^8.6.6",
     "axios": "^1.3.6",
     "bcrypt": "^5.1.0",
@@ -24,6 +26,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.22",
     "pg": "^8.10.0"
